// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema.storage;

option go_package = "namespacelabs.dev/foundation/schema/storage";

import "schema/runtime/types.proto";
import "schema/storage/task.proto";
import "google/protobuf/timestamp.proto";

message LogRef {
    string                                  package_name   = 1;
    string                                  container_name = 2;
    foundation.schema.runtime.ContainerKind container_kind = 4;
    string                                  log_file       = 3;
    uint64                                  log_size       = 5;
}

message Command {
    repeated StoredTask action_log   = 1;
    repeated Log        attached_log = 2;

    message Log {
        string id      = 1;
        bytes  content = 2;
    }
}

message LogLine {
    string                    buffer_id       = 1;
    string                    buffer_name     = 2;
    string                    action_category = 3;
    string                    action_id       = 4;
    repeated string           line            = 5;
    google.protobuf.Timestamp timestamp       = 6;
}